added swagger deploy support
