# laravel-sqlite-api-swagger/app/Models/Player.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Player extends Model
+{
+    protected $fillable = [
+        'Name',
+        'Team',
+    ];
+}
