# laravel-sqlite-api-swagger/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\api\PlayersController;
 use App\Http\Controllers\api\StudentsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -8,14 +9,5 @@ Route::get('/user', function (Request $request) {
     return $request->user();
 })->middleware('auth:sanctum');
 
-Route::get('students', function () {
-    return Student::all();
-});
-
-// Route::get('students', [StudentsController::class, 'index']);
-// Route::get('students/{student}', [StudentsController::class, 'show']);
-// Route::post('students', [StudentsController::class, 'store']);
-// Route::put('students/{student}', [StudentsController::class, 'update']);
-// Route::delete('students/{student}', [StudentsController::class, 'destroy']);
-
 Route::resource('students', StudentsController::class);
+Route::resource('players', PlayersController::class);
